--- a/frontend/index.html
+++ b/frontend/index.html
@@ -66,6 +66,7 @@
                 <div class="form-group">
                     <label for="limit">Limite de Resultados</label>
                     <select id="limit" name="limit">
+                        <option value="25">25</option>
                         <option value="50">50</option>
                         <option value="100">100</option>
                         <option value="200">200</option>
